# MediaSimplePlayer

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rokid/simpleplayer/: BaseActivity.java  GLRawDataRender.java  IPlayStateListener.java  MainActivity.java  MediaDecodeHelper.java  MediaDecodeListener.java  SimplePlayer.java
app/src/main/java/com/rokid/simpleplayer/face/: FaceConstants.java
app/src/main/java/com/rokid/simpleplayer/face/faceserver/: CompareResult.java  FaceServer.java
app/src/main/java/com/rokid/simpleplayer/face/model/: DrawInfo.java  FacePreviewInfo.java  FaceRegisterInfo.java
app/src/main/java/com/rokid/simpleplayer/face/utils/: ConfigUtil.java  DrawHelper.java  FaceHelper.java  FaceListener.java  FileUtils.java  LivenessType.java  RecognizeColor.java  RequestFeatureStatus.java  RequestLivenessStatus.java  TrackUtil.java
app/src/main/java/com/rokid/simpleplayer/face/widget/: FaceRectView.java  FaceSearchResultAdapter.java  ProgressDialog.java
app/src/main/java/com/rokid/simpleplayer/gl/: GLMatrixState.java  GLShaderUtil.java  GLTextureUtil.java  Logger.java  YUVHelper.java
app/src/main/java/com/rokid/simpleplayer/utils/: GLMatrixState.java  GLShaderUtil.java  GLTextureUtil.java  Logger.java
app/src/main/jni/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
